Antes (poco) de empezar con el reto

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,4 +4,6 @@
 	<h1>Contactos</h1>
 	<h2>Bienvenido a la web de contactos.</h2>
 	<p>Página de inicio</p>
+
+{{ include ('lista_contactos.html.twig', { 'contactos': contactos }) }}
 {% endblock %}
